--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <!-- font-family: 'Open Sans', sans-serif; -->
 
 <head>
-    <script src="p5.js"></script>
+    <title>Boxes</title>
+    <link rel="icon" href="../favicon-32x32.png" type="image/x-icon" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0S2P2370YL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-0S2P2370YL');
+    </script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "1b02937560824b17936cfae99c5de8af"}'></script><!-- End Cloudflare Web Analytics -->
     <style>
         html,
         body {
@@ -17,33 +34,12 @@
         canvas {
             display: block;
         }
-
-        /* input {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 30px;
-            width: 100%;
-            text-align: center;
-            border: none;
-            outline: none;
-            background: none;
-            color: #fff;
-            font-family: 'Open Sans', sans-serif;
-            font-weight: 300;
-            padding: 0;
-            margin: 0;
-            visibility: hidden;
-        } */
     </style>
 </head>
 
 <body>
+    <script>alert("Use scroll wheel and spacebar!")</script>
     <script src="sketch.js"></script>
-    <div class="input-box">
-        <!-- <input type="text" id="input"/> -->
-    </div>
 
 
 
